--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<header>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
+     <title>Brino</title>
+</head>
+<body>
+
+    <header>
         <img src="logo.jpg" alt="Brino com seu cão">
         <nav>
             <ul>
@@ -7,7 +17,26 @@
             </ul>
                  
         </nav>
-        <section>
-            <img src="" alt="">
-        </section>
     </header>
+
+    <main>
+        <section class="dona30_1">
+            <img src="dona.png" alt="">
+            <img src="dona19.png" alt="">
+            <img src="dona20.png" alt="" >
+        </section>
+
+        <section class="dona33_2">
+            <img src="dona21.png" alt="">
+        </section>
+
+        <section class="dona31_3">
+            <img src="dona22.png" alt="">
+            <img src="dona26.png" alt="">
+            <img src="dona27.png" alt="" >
+        </section>
+
+    </main>
+
+</body>
+</html>
