--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="logo.jpg" alt="Brino com seu cão">
+        <img src="logo.jpg" alt="DonaPRIME">
         <nav>
             <ul>
                 <li><a href="#">Sobre</a></li>
