--- a/index.html
+++ b/index.html
@@ -3,40 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
-     <title>dona19</title>
+    <title>Yuri22</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <img src="logo.jpg" alt="DonaPRIME">
-        <nav>
-            <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Fale Conosco</a></li>
-            </ul>
-                 
-        </nav>
-    </header>
+    <section class="caixa-grande"></section>
+    
+    <section class="retangulo-esquerdo">
+        <img src="yuri1.jpeg" alt="yuri">
+        <img src="yuri2.jpeg" alt="yuri">
+        <img src="yuri3.jpeg" alt="yuri">
+    </section>
 
-    <main>
-        <section class="dona30_1">
-            <img src="dona.png" alt="">
-            <img src="dona19.png" alt="">
-            <img src="dona20.png" alt="" >
-        </section>
+    <section class="retangulo-direito">
+        <img src="yuri4.jpeg" alt="yuri">
+        <img src="yuri5.jpeg" alt="yuri">
+        <img src="yuri6.jpeg" alt="yuri">
+    </section>
 
-        <section class="dona33_2">
-            <img src="dona21.png" alt="">
-        </section>
+    <section class="caixa-texto">
+        <img src="yuricima.jpeg" alt="yuri cima" class="img-caixa">
+        <div style="display: flex; gap: 20px;">
+            <div id="Imagens" class="retangulo-menor">Imagens</div>
+            <div class="retangulo-menor">Fale Conosco</div>
+        </div>
+    </section>
 
-        <section class="dona31_3">
-            <img src="dona22.png" alt="">
-            <img src="dona26.png" alt="">
-            <img src="dona27.png" alt="" >
-        </section>
+    <section class="retangulo-meio">
+        <img src="yurilogo.jpeg" alt="yuri">
+    </section>
 
-    </main>
-
+   <script src="yuri.js"></script>
 </body>
 </html>
