--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <section class="caixa-grande"></section>
     
     <section class="retangulo-esquerdo">
-        <img src="yuri1.jpeg" alt="yuri">
-        <img src="yuri2.jpeg" alt="yuri">
-        <img src="yuri3.jpeg" alt="yuri">
+        <img src="dona1.jpeg" alt="yuri">
+        <img src="dona2.jpeg" alt="yuri">
+        <img src="dona3.jpeg" alt="yuri">
     </section>
 
     <section class="retangulo-direito">
-        <img src="yuri4.jpeg" alt="yuri">
-        <img src="yuri5.jpeg" alt="yuri">
-        <img src="yuri6.jpeg" alt="yuri">
+        <img src="dona4.jpeg" alt="yuri">
+        <img src="dona5.jpeg" alt="yuri">
+        <img src="dona6.jpeg" alt="yuri">
     </section>
 
     <section class="caixa-texto">
-        <img src="yuricima.jpeg" alt="yuri cima" class="img-caixa">
+        <img src="donacima.jpeg" alt="yuri cima" class="img-caixa">
         <div style="display: flex; gap: 20px;">
             <div id="Imagens" class="retangulo-menor">Imagens</div>
             <div class="retangulo-menor">Fale Conosco</div>
@@ -31,9 +31,9 @@
     </section>
 
     <section class="retangulo-meio">
-        <img src="yurilogo.jpeg" alt="yuri">
+        <img src="donalogo.jpeg" alt="yuri">
     </section>
 
-   <script src="yuri.js"></script>
+   <script src="dona.js"></script>
 </body>
 </html>
