--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <section class="caixa-grande"></section>
     
     <section class="retangulo-esquerdo">
-        <img src="dona1.jpeg" alt="yuri">
-        <img src="dona2.jpeg" alt="yuri">
-        <img src="dona3.jpeg" alt="yuri">
+        <img src="dona1.jpeg" alt="dona">
+        <img src="dona2.jpeg" alt="dona">
+        <img src="dona3.jpeg" alt="dona">
     </section>
 
     <section class="retangulo-direito">
-        <img src="dona4.jpeg" alt="yuri">
-        <img src="dona5.jpeg" alt="yuri">
-        <img src="dona6.jpeg" alt="yuri">
+        <img src="dona4.jpeg" alt="dona">
+        <img src="dona5.jpeg" alt="dona">
+        <img src="dona6.jpeg" alt="dona">
     </section>
 
     <section class="caixa-texto">
-        <img src="donacima.jpeg" alt="yuri cima" class="img-caixa">
+        <img src="donacima.jpeg" alt="dona cima" class="img-caixa">
         <div style="display: flex; gap: 20px;">
             <div id="Imagens" class="retangulo-menor">Imagens</div>
             <div class="retangulo-menor">Fale Conosco</div>
