--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <section class="caixa-grande"></section>
     
     <section class="retangulo-esquerdo">
-        <img src="dona1.jpeg" alt="dona">
-        <img src="dona2.jpeg" alt="dona">
-        <img src="dona3.jpeg" alt="dona">
+        <img src="1.jpeg" alt="dona">
+        <img src="2.jpeg" alt="dona">
+        <img src="3.jpeg" alt="dona">
     </section>
 
     <section class="retangulo-direito">
-        <img src="dona4.jpeg" alt="dona">
-        <img src="dona5.jpeg" alt="dona">
-        <img src="dona6.jpeg" alt="dona">
+        <img src="4.jpeg" alt="dona">
+        <img src="5.jpeg" alt="dona">
+        <img src="6.jpeg" alt="dona">
     </section>
 
     <section class="caixa-texto">
-        <img src="donacima.jpeg" alt="dona cima" class="img-caixa">
+        <img src="cima.jpeg" alt="dona cima" class="img-caixa">
         <div style="display: flex; gap: 20px;">
             <div id="Imagens" class="retangulo-menor">Imagens</div>
             <div class="retangulo-menor">Fale Conosco</div>
@@ -31,9 +31,9 @@
     </section>
 
     <section class="retangulo-meio">
-        <img src="donalogo.jpeg" alt="yuri">
+        <img src=".jpeg" alt="yuri">
     </section>
 
-   <script src="dona.js"></script>
+   <script src="brelly.js"></script>
 </body>
 </html>
