--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="caixa-texto">
-        <img src="cima.jpeg" alt="dona cima" class="img-caixa">
+        <img src="77cima.jpeg" alt="dona cima" class="img-caixa">
         <div style="display: flex; gap: 20px;">
             <div id="Imagens" class="retangulo-menor">Imagens</div>
             <div class="retangulo-menor">Fale Conosco</div>
@@ -31,7 +31,7 @@
     </section>
 
     <section class="retangulo-meio">
-        <img src=".jpeg" alt="yuri">
+        <img src="77.jpeg" alt="yuri">
     </section>
 
    <script src="brelly.js"></script>
