--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <section class="retangulo-meio">
-        <img src="77.jpeg" alt="yuri">
+        <img src="77logo.jpeg" alt="yuri">
     </section>
 
    <script src="brelly.js"></script>
