--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dona19</title>
+    <title>brelly</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,15 +11,15 @@
     <section class="caixa-grande"></section>
     
     <section class="retangulo-esquerdo">
-        <img src="1.jpeg" alt="dona">
-        <img src="2.jpeg" alt="dona">
-        <img src="3.jpeg" alt="dona">
+        <img src="1.jpeg" alt="brelly">
+        <img src="2.jpeg" alt="brelly">
+        <img src="3.jpeg" alt="brelly">
     </section>
 
     <section class="retangulo-direito">
-        <img src="4.jpeg" alt="dona">
-        <img src="5.jpeg" alt="dona">
-        <img src="6.jpeg" alt="dona">
+        <img src="4.jpeg" alt="brelly">
+        <img src="5.jpeg" alt="brelly">
+        <img src="6.jpeg" alt="brelly">
     </section>
 
     <section class="caixa-texto">
@@ -31,7 +31,7 @@
     </section>
 
     <section class="retangulo-meio">
-        <img src="77logo.jpeg" alt="yuri">
+        <img src="77logo.jpeg" alt="brelly">
     </section>
 
    <script src="brelly.js"></script>
